# Contract-Information-Extractor

./: README.md  app.py  pyproject.toml  vercel.json
static/: index.html  output.json  scripts.js  styles.css
