[tool.poetry]
name = "assignment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
openai = "^1.57.0"
fitz = "^0.0.1.dev2"
pydantic = "^2.10.3"
frontend = "^0.0.3"
tools = "^0.1.9"
python-multipart = "^0.0.19"
python-docx = "^1.1.2"
uvicorn = "^0.34.0"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
